# esp-idf-sht4x

./: .clangd  CMakeLists.txt  README.org
components/sht4x/: CMakeLists.txt
components/sht4x/implementation/: sensirion_i2c_hal.c
components/sht4x/include/: sht4x.h
main/: CMakeLists.txt  main.c
